# swift-gen

./: GeoJSON.swift.gen  Main.hs  README.md  swift-gen.cabal
examples/: GeoJSON.swift.gen  Things.swift.gen
main/: Main.hs
src/: CodeGen.hs
tests/: ex1.swift  ex1.swift.gen  ex2.swift  ex2.swift.gen  test.hs
