name:                swift-gen
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8, haskell-src-exts == 1.15.0.1, text
  exposed-modules:     CodeGen
  hs-source-dirs:      src
  default-language:    Haskell2010

executable swift-gen
  main-is:             Main.hs
  build-depends:       base, swift-gen, haskell-src-exts, text
  hs-source-dirs:      main
  default-language:    Haskell2010

test-suite swift-gen-test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      tests
  build-depends:       base, swift-gen, haskell-src-exts, text, HUnit == 1.2.5.2
  default-language:    Haskell2010
